# mortgage-intelligence

./: .antz-cookiecutter.json  .gitignore  SKILLS.md  improvements.md  pyproject.toml  render.yaml  requirements.txt
.claude/: launch.json
.cursor/rules/: typescript.mdc
backend/: CLAUDE.md  Dockerfile  dependencies.py  entrypoint.sh  main.py
backend/agents/: base_agent.py
backend/agents/cross_doc_validator/: __init__.py  agent.py  graph.py  prompts.py
backend/agents/document_classifier/: agent.py  prompts.py
backend/auth/: azure_ad.py
backend/core/: config.py  rate_limit.py
backend/db/: alembic.ini  postgres.py
backend/db/migrations/: env.py
backend/db/models/: __init__.py  agent_validation.py  audit.py  base.py  condition.py  document.py  loan.py  message.py  tenant.py  user.py
backend/events/: sse.py
backend/routers/: auth.py  dashboard.py  documents.py  health.py  loans.py  webhooks.py
backend/services/: loan_metrics.py
backend/services/encompass/: client.py
backend/shared/: llm.py  storage.py  types.py
backend/tests/: create_test_docs.py
docs/: README.md  RENDER_DEPLOY.md  SERVER_DEPLOY.md  _render_architecture.py  architecture.drawio
docs/adr/: ADR-0001-template.md
frontend/: CLAUDE.md  Dockerfile  empty-module.js  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  auth.ts  utils.ts
infra/: .env.example  .env.prod.example  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
scripts/: package.sh
(+15 files in other folders)
